--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <div class="sidebar-header">
                 <h1 class="sidebar-title">
                     <span class="ai-icon">🤖</span>
-                    AI Assignment
+                    Assignment Displayer By Otabek Jurabekov
                 </h1>
                 <button class="add-header-btn" id="addHeaderBtn">
                     <span class="plus-icon">+</span>
